--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
     "react-redux": "^8.0.5",
