--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "dotenv": "^16.0.3",
+    "js-search": "^2.0.0",
     "moment": "^2.29.4",
     "prop-search": "^1.1.8",
     "react": "^18.2.0",
