material ui into bootstrap

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
+    "i": "^0.3.7",
     "js-search": "^2.0.0",
     "moment": "^2.29.4",
+    "npm": "^9.3.1",
     "prop-search": "^1.1.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
